*Empty MediaWiki Message*

--- a/Hellmanngetal.mw
+++ b/Hellmanngetal.mw
@@ -1,7 +1,7 @@
-Et '''Helmanngetal''', ook wel '''koldegetal''' ([[Nederlaands]]: '''''koudegetal'''''), is een meniere um de totaole hoevölheid kolde te meten in een seizoen. Et Helmanngetal (H) wördt emeten van 1 november töt 31 meert. Et is vernuumd nao de [[Duutslaand|Duutse]] [[meteorologie|meteoroloog]] [[Gustav Helmann]]. Veur de zommer bestiet er een soortgeliek iets, nämelik et [[warmtegetal]]. 
+Et '''Hellmanngetal''', ook wel '''koldegetal''' ([[Nederlaands]]: '''''koudegetal'''''), is een meniere um de totaole hoevölheid kolde te meten in een seizoen. Et Hellmanngetal (H) wördt emeten van 1 november töt 31 meert. Et is vernuumd nao de [[Duutslaand|Duutse]] [[meteorologie|meteoroloog]] [[Gustav Hellmann]]. Veur de zommer bestiet er een soortgeliek iets, nämelik et [[warmtegetal]]. 
 
 ==Bepaoling en naodielen==
-Et Helmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur leger dan et vröspunt bie mekare op te tellen. An et ende wördt et minteken vot elaoten. Zo geaft twie dagen met een gemiddelde temperetuur van -1,2°C en -0,3°C een Helmanngetal van 1,5. Een naodiel van disse meniere is det een winter met völle nachtvörst met oaverdag tempereturen ruum baoven de nul graoden niet vlug een heug(er) Helmanngetal hef. An de aandere kaante kan een warme winter met een paor iesdagen al rap een heuger Helmanngetal kriegen. Een veurbield is de winter van 2011-2012.
+Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur leger dan et vröspunt bie mekare op te tellen. An et ende wördt et minteken vot elaoten. Zo geaft twie dagen met een gemiddelde temperetuur van -1,2°C en -0,3°C een Hellmanngetal van 1,5. Een naodiel van disse meniere is det een winter met völle nachtvörst met oaverdag tempereturen ruum baoven de nul graoden niet vlug een heug(er) Hellmanngetal hef. An de aandere kaante kan een warme winter met een paor iesdagen al rap een heuger Hellmanngetal kriegen. Een veurbield is de winter van 2011-2012.
 
 '''Classificaotie in Nederlaand:'''
 
@@ -44,12 +44,12 @@ Et Helmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur le
 |}
 
 ==Geschiedenisse==
-In Nederlaand bint er Helmanngetallen sinds [[1901]] bekend. Et is meugelik um wieder terugge et Helmanngetal te bepaolen, maar de metings van vrogger bint van slechtere kwaliteit as now en er wördden niet in de Bilt emeten. Hierdeur is ien op ien vergelieking muuilik.
+In Nederlaand bint er Hellmanngetallen sinds [[1901]] bekend. Et is meugelik um wieder terugge et Hellmanngetal te bepaolen, maar de metings van vrogger bint van slechtere kwaliteit as now en er wördden niet in de Bilt emeten. Hierdeur is ien op ien vergelieking muuilik.
 
 De winter van 2013-2014 was de eerste winter sinds minstens 1901 die nul punten ehaold hef.
 
 {|class="vatop"
-! Heugste Helmanngetallen !! Leegste Helmanngetallen
+! Heugste Hellmanngetallen !! Leegste Hellmanngetallen
 |-
 |
 {| class="wikitable sortable"
@@ -104,7 +104,7 @@ De winter van 2013-2014 was de eerste winter sinds minstens 1901 die nul punten 
 |}
 
 ==Verwiezings==
-* Lieste van Helmanngetallen in Nederlaand:
+* Lieste van Hellmanngetallen in Nederlaand:
 <references/>
-* [http://www.wzforum.de/forum2/read.php?6,1453354,1454308 Helmanngetallen vanaf 1750 in Basel, Berlien, Praag, Frankfurt, Dresden, etc.]
+* [http://www.wzforum.de/forum2/read.php?6,1453354,1454308 Hellmanngetallen vanaf 1750 in Basel, Berlien, Praag, Frankfurt, Dresden, etc.]
 {{Dialekt|sdz}}
