--- a/Zwols.mw
+++ b/Zwols.mw
@@ -2,7 +2,7 @@
 't '''Zwols''' is 't [[stadsdialekt]] van de [[Oaveriessel|Aoveriesselse]] eufdstad [[Zwolle]]. 't Be-eurt töt de [[Sallaands|Sallands]]e dialektgroep, die weer deel uutmaakt van t [[Nedersaksies]].
 
 ==Kenmärken==
-Kenmärkend veur 't Zwols is 't [[h-deletie|votlaoten van de h]] (wat ok in de umliggende gebieden veurkump, töt in 't [[Urkers]]) en de bri'jende (Franse) uutspraoke van de [[r]] (typies veur stadsdialekten, kump värder onder andere veur in 't [[Kampers]], [[Daeventers|D]]<nowiki/>è[[Daeventers|venters]] en [[Zutfens]]). Zwollenaeren wörren/wieren in de umliggende dörpen dan ok bri'jbekken enuumd.<ref>De term ''bri'jbek'' is beveurbield op-etiekend in Schoemaker-Ytsma, A.C.M. (2006), ''"Zo zegge wi'j det" van A tot Z! Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> een riempien dät ze onder de rook van Zwolle wè gebruken, giet: ''Bri'j, brood en proemen, kunt de Zwolsen niet noemen.''<ref>Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref>
+Kenmärkend veur 't Zwols is 't [[h-deletie|votlaoten van de h]] (wat ok in de umliggende gebieden veurkump, töt in 't [[Urkers]]) en de bri'jende (Franse) uutspraoke van de [[r]] (typies veur stadsdialekten, kump värder onder andere veur in 't [[Kampers]], [[Dèventers]] en [[Zutfens]]). Zwollenaeren wörren/wieren in de umliggende dörpen dan ok bri'jbekken enuumd.<ref>De term ''bri'jbek'' is beveurbield op-etiekend in Schoemaker-Ytsma, A.C.M. (2006), ''"Zo zegge wi'j det" van A tot Z! Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> een riempien dät ze onder de rook van Zwolle wè gebruken, giet: ''Bri'j, brood en proemen, kunt de Zwolsen niet noemen.''<ref>Schoemaker-Ytsma, A.C.M. (2009), ''"Zo zegge wi'j det" van A tot Z! (aanvulling) Woorden en gezegdes in het dialect van Nieuwleusen'', Ni'jlusen: The Readshop J. Hilbrink</ref> Et Zwols hef völle klanken die uut erekt bint. Zo wördt er völ gebruuk gemaakt van de ae wöör niet al 't Sallands dit hef. Volgens [[Johan Winkler]] praoten Zwollenaeren 'sleepende en een weinig temerig te spreken. De lange klinkers en de tweeklanken worden door hen zoo lang mogelijk uitgerekt en aangehouden.'<ref>[https://www.dbnl.org/tekst/wink007alge01_01/colofon.php Algemeen Nederduitsch en Friesch Dialecticon Deel 1 p. 377]</ref> Andere kenmärken bint et völle gebruuk van de ä (/æ(:)/ en 't gebruuk van sk. De sk klank veur sch kump niet veur op 't platteland, maar wè weer in bi'jveurbeeld [[Zutphen]]. Zwolle lig op de liende van [[ienheidsmeervold]]. Zwolle hef hier alle westelike kenmärken be-alve in et wärkwoord wean. In Zwolle is 't wi'j bint en niet wi'j binnen.<ref>[http://www.detaalvanoverijssel.nl/plaats/id:19 Over de taal van Zwolle. bekeken op 15 meei 2020.]</ref>
 
 Naodät de [[Verienigde Staoten van Amerika|Amerikaanse]] [[taalkunde|taalkundige]] [[William Shetter]] deur de Nederlandse taalkundige [[G.G. Kloeke]] met-enömmen wier naor Zwolle, skrif e 't ärtikel "Phonemics of the Zwolle Dialect: Synchronic and Diachronic", dät in 1958 verskeen in ''Language'', 't miest gezag-ebbende tiedskrift op 't gebied van de taalwetenskoppen.<ref>[http://www.jstor.org/pss/411275 Shetter, William Z. (1958), ''Phonemics of the Zwolle Dialect: Synchronic and Diachronic''. In ''Language'' jg. 34, nr. 1]</ref>
 
@@ -23,7 +23,7 @@ De Zwolstalige stukkiesbundel ''Mien Ome Jan...'' deur [[Minke Kraijer]] (Uitgev
 Van [[Willem Kloeke]], de va van taalkundige [[G.G. Kloeke]], kwammen in 1931 de ''Zwolsche Sketsies'' uut (Thieme). Minke Kraijer van de Dialektkringe Zwolle skrif alle wèken een kolumn in 't Zwols in uus-an-uus-kräntien ''De Peperbus'' (De Pèperbusse) en skrif ''Mien Ome Jan...'' (2007), erinneringen an aer ome, in 't Zwols en Nederlands. Van Loes van 't Haar-de Vries verskeen ok in 2007 de reseptenbundel ''In de Zwolse pot''. Veur de strèèktaal van West-Aoveriessel, wööronder 't Zwols, ef 't strèèkkenniscentrum de [[Iesselakademie]] (IJsselacademie) spellingsrichtlienden ontwörpen.<ref>[http://www.ijsselacademie.nl/ija/taal/spellingsbrochure/inhoudsopgave.asp Spellingsrichtlienden van de Iesselakademie veur t West-Aoveriessels en Oost-Veluws]</ref> Ok Wikipedie ef een eigen spelling (veur alle Nedersaksiese dialekten) ontwörpen, die is ok gebruukt in dit ärtikel.
 
 ===Zwols woordeboek===
-In november 2009 kwam bi'j de Iesselakademie een uutputtend Zwols woordeboek uut: ''Op zien Zwols: Woordenboek van de Zwolse taal''. 't Is eskröven deur Minke Kraijer, Henk Mulder, Dick Visscher en [[Philomène Bloemhoff]]. Vanof 1986 ebben ze Zwolse woorden en uutdrukkingen op pepier ezet en in 1999 is 't wärk an 't boek begunnen. <ref>[http://www.destentor.nl/regio/zwolle/5721982/Zwols-woordenboek-ligt-volgende-week-in-winkels.ece De Stentor aover t verskienen van t Zwols woordeboek]</ref><ref>[http://www.destentor.nl/algemeen/cultuurstn/special/streeksite/2696410/De-drie-varianten-van-donderkop.ece De Stentor aover t Zwols woordeboek]</ref>
+In november 2009 kwam bi'j de Iesselakademie een uutputtend Zwols woordeboek uut: ''Op zien Zwols: Woordenboek van de Zwolse taal''. 't Is eskröven deur Minke Kraijer, Henk Mulder, Dick Visscher en [[Philomène Bloemhoff]]. Vanof 1986 ebben ze Zwolse woorden en uutdrukkingen op pepier ezet en in 1999 is 't wärk an 't boek begunnen<ref>[http://www.destentor.nl/regio/zwolle/5721982/Zwols-woordenboek-ligt-volgende-week-in-winkels.ece De Stentor aover t verskienen van t Zwols woordeboek]</ref><ref>[http://www.destentor.nl/algemeen/cultuurstn/special/streeksite/2696410/De-drie-varianten-van-donderkop.ece De Stentor aover t Zwols woordeboek]</ref>.
 
 ===Verdere aktiviteiten===
 De Iesselakademie örganiseert 't ''Groot Zwols Taaldictee''<ref>[http://www.deweekkrant.nl/artikel/2008/februari/11/groot_zwols_taaldictee_in_het_gemeentehuis De Waekkrante aover t Groot Zwols Taaldictee]</ref> en de cursus Zwolse taal en cultuur.<ref>[http://www.ijsselacademie.nl/ija/taal/watwijdoen.asp Streektaalactiviteiten van de Iesselakademie]</ref> Disse cursus, now därtien keer egöven, ad de eerste jören öördig wat belangstelling, maer kon in 2007 niet deurgaon umdät der te weinig kursisten waeren.<ref name="Stentor20081029">[http://www.destentor.nl/regio/zwolle/zwolle/3949079/Gebrek-aan-interesse-nekt-dialect.ece?startshow=null&startSlide=null ''Gebrek aan interesse nekt dialect''. De Stentor, 29 oktober 2008]</ref> Later is de cursus nog wè weer een antal jören egöven umme in 2013 veur de leste maol egöven te wörren. Der is värder een Dialektkringe Zwolle; veural oldere mensen bezuken döör de bi'jienkomsten van.<ref name="Stentor20081029">[http://www.destentor.nl/regio/zwolle/zwolle/3949079/Gebrek-aan-interesse-nekt-dialect.ece?startshow=null&startSlide=null ''Gebrek aan interesse nekt dialect''. De Stentor, 29 oktober 2008]</ref>
