*Empty MediaWiki Message*

--- a/Mederne_devotie.mw
+++ b/Mederne_devotie.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Zwolle Windesheim Klooster.jpg|thumb|260px|'t Brouwhuus (now [[Protestaantse Karke Nederlaand|PKN]]-karke) van de [[Congregatie van Windesheim]] in 't dörp [[Windesheim]]]]
-De '''Mederne devotie ''' ([[Latien]]: ''Devotio moderna'') was een [[spiritualiteit|spirituele]] beweging binnen de middeleeuwse [[Rooms-Katholieke Karke|Kattelieke Karke]] die opkwaamp in 't [[Oaversticht]] - vandage [[Oaveriessel]] - op 't end van de veertiende eeuw. De beweging ontstund deurdet een köppel mèensen niet bliede waren mit heur situatie deur misstaanden in de Karke. De Mederne devotie stund veur een verni'jing van 't christelijke gemienschopslèven; ie kunt 't zien as een hervörmingsbeweging binnen de Karke. Persoonlijke lèvensheiliging en praktische lèvenswiesheid vörmden 't strèven. De initiatiefnemers waren [[geestelijke]]n en [[leek (Rooms-Katholieke Karke|leken]]. Ze leefden in gemienschop van taofel en goedern zunder een kloosterbelofte of te leggen.
+De '''Mederne devotie ''' ([[Latien]]: ''Devotio moderna'') was een [[spiritualiteit|spirituele]] beweging binnen de middeleeuwse [[Rooms-Katholieke Karke|Kattelieke Karke]] die opkwaamp in 't [[Oaversticht]] - vandage [[Oaveriessel]] - op 't end van de veertiende eeuw. De beweging ontstund deurdet een köppel mèensen niet bliede waren mit heur situatie deur misstaanden in de Karke. De Mederne devotie stund veur een verni'jing van 't christelijke gemienschopslèven; ie kunt 't zien as een hervörmingsbeweging binnen de Karke. Persoonlijke lèvensheiliging en praktische lèvenswiesheid vörmden 't strèven. De initiatiefnemers waren [[geestelijke]]n en [[leek (Rooms-Katholieke Karke|leken]]. Ze leefden in gemienschop van taofel en goedern zunder een kloosterbelofte of te leggen. De Mederne Devotie schreef in et [[Iessellaands]], een schrieftaal die tussen et Middelnederlaands en Middelnederduuts in stund<ref>Jurjen van der Kooij; Henk Bloemhoff, Hermann Niebaum en Siemon Reker, [https://dbnl.org/tekst/kooi001hand01_01/index.php Handboek Nedersaksische taal- en letterkunde]. Koninklijke van Gorcum (2008), pp. 43. <nowiki>ISBN 978 90 232 4329 8</nowiki>.</ref><ref>Naar een taalgeschiedenis van van Oostnederland. Hermann Niebaum, 1985.</ref><ref>[https://www.dbnl.org/tekst/toor004gesc01_01/colofon.php Geschiedenis van de Nederlandse taal]. Amsterdam University Press (1997), pp. 155.</ref>
 
 ==Geert Grote==
 De grondlegger van de Mederne devotie was [[Geert Grote]] ([[Dèventer]], oktober 1340 - aldaor 20 augustus 1384). Hi'j wördden in Dèventer geboren as iene van een dikke haandelsfemilie. Grote vund gien voldoening in de haandel en richtten hum op [[religie]]uze zaken. De bestaonde praktijken van de karke vund e ok niet wat; hi'j zag ze as corrumperend. In zien stad stichtten hi'j de eerste woongemienschoppen van de [[Zusters van 't Gemiene Lèven]] en de [[Breurs van 't Gemiene Lèven]]. Dit waren gemienschoppen van leken (niet ewi'jde geestelijken). De zusters, en wat later ok de breurs, preekten een geestelijk reveil tègen de verloedering van 't lèven van de [[geestelijke|clerus]] en de verroeging van de volkse zeden. Heur veurnaamste bezigheden waren de zörg veur de studerende jongen en 't verbètern van de leefumstaandigheden van 't volk.
