Versy 311998 van [[Special:Contributions/5.132.124.182|5.132.124.182]] ([[User talk:5.132.124.182|oaverleg]]) weaderümmedraid Geyn nederlaandske wikipedia

--- a/Den_Helder.mw
+++ b/Den_Helder.mw
@@ -20,7 +20,7 @@
 }}
 '''Den Helder''' ([[Westfries]]: ''Helder'') is de noordelekste gemeente op het vaastelaand van de Nederlandse previnsie [[Noord-Hollaand]]. De streke woar Den Helder ligt neumt zi-j de 'Kop van Noord-Hollaand of Noordkop'. De gemeente had vanof [[1 december]] [[2007]] 58.036 inwonners op ne oppervlakte van 178,83 km² woarvan 133,42 km² water. In de stad zelf wont rundum 45.000 leu. 
 
-== Geschiedenis ==
+== Geskiednis ==
 De meiste inwonners van de gemeente Den Helder wont in de geliekeneumde [[Stad (woonstee)|stad]], rundum 44 doezend leu. De belangriekste dealn van Den Helder bunt Ni-j Den Helder, De Schooten en de Helderse binnenstad. De aandere inwonners van de gemeente wont in de kernen Julianadorp (rundumme 15.000) en in Huusduunen (rundumme 1000). Dizze kernen wodt noe as wieken ezene, umdat ze kort bi-j de stad Den Helder ligt. Huusduunen is het eurspronkeleke Den Helder; later kwam naobi-j Huusduunen nen tweeden kern. Dizzen wierd ''Helder'' eneumd en dat is et begin ewest van het hudege Den Helder.
 
 Helder en et grondgebeed van de hudege gemeente Den Helder beheurden in de vrögge Middeleeuwn tot de Gouw.
