*Empty MediaWiki Message*

--- a/Veno.mw
+++ b/Veno.mw
@@ -68,6 +68,7 @@ Ofbeelding:Vollenhoven_grootn_karke_veur.jpg|Groten Karke (veuraanzicht)
 Ofbeelding:Vollenhoven_grootn_karke.jpg|Groten Karke (zi-j anzicht)
 </gallery>
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs_artikel]]
 [[Kategorie:Stad in Nederlaand]]
 [[Kategorie:Plaatse in Oaveriessel]]
