--- a/Blankenham.mw
+++ b/Blankenham.mw
@@ -9,6 +9,7 @@ Blankenham is ontstaon doe de [[buurtskop]] ''Iesselham'' in tweeën splitste. O
 ==Mythe==
 Bi'j disse plaetse heurt et verhael van de [[Frunen]], wezens die in de kolken langes de diek zollen leven. Lichtkaans is de mythe in de mederne tied uuteprakkezeerd veur promotionele doeleinden.
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eskreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
