*Empty MediaWiki Message*

--- a/Blokziel.mw
+++ b/Blokziel.mw
@@ -16,6 +16,7 @@ Ofbeelding:Blokzijl 3462.JPG |
 Ofbeelding:Blokzijl 3.jpg|
 </gallery>
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs_artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Vroggere gemiente in Oaveriessel]]
