*Empty MediaWiki Message*

--- a/Gieteren.mw
+++ b/Gieteren.mw
@@ -15,6 +15,7 @@ Karkelik ezien is Gieteren een vri'jzinnige enklave temidden van een orthodox ge
 == Uutgaonde verwiezing ==
 * [http://www.giethoorn.nl Webstee van Gieteren]
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
