--- a/Kallenkote.mw
+++ b/Kallenkote.mw
@@ -1,5 +1,6 @@
 '''Kallenkote''' is een kerakteristiek [[lintdörp]] in de [[Kop van Overiessel]] (gemiente [[Stienwiekerlaand]]) in de [[Nederlaand|Nederlaanse]] perveensie [[Overiessel]]. Rond et jaor 1200 wodt disse plak onder de naeme Collencoten veur et eerst intekend op kaorten. Et bebouwingslint leit op de greens van et zaand- en et veenpakket en volgt omdebi'j de liende van de [[Stienwieker Aa]], aanderhalve kilemeter in westelike richting.
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs_artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Stienwiekerlaand]]
