*Empty MediaWiki Message*

--- a/Ooldemark.mw
+++ b/Ooldemark.mw
@@ -5,6 +5,7 @@ Elk jaor wodden op [[Hemelvaortsdag]] in Ooldemark de bekende Lambertusfeesten e
 
 De bi'jnaeme veur de inwoners van Ooldemark is ''stoepeschieters''.
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Stienwiekerlaand]]
