*Empty MediaWiki Message*

--- a/Ossenziel.mw
+++ b/Ossenziel.mw
@@ -4,6 +4,7 @@ Ossenziel leit an de Kaelenbargergrachte, die de [[Nationaol Park De Weerribben|
 
 In Ossenziel bin twie karken. Een [[PKN]]-gemiente en een [[Vrieje Zendings Gemiente]]. Riegelmaotig warken ze tegere.
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs_artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Stienwiekerlaand]]
