*Empty MediaWiki Message*

--- a/Scheerwolde.mw
+++ b/Scheerwolde.mw
@@ -6,6 +6,7 @@
 *[http://www.viamichelin.com/viamichelin/gbr/dyn/controller/mapPerformPage?strCP=&strLocation=Scheerwolde&strCountry=285 Lekaosie van Scheerwolde]
 *[http://www.scheerwolde-ov.nl Alles over Scaerwold(e)]
 
+{{Stienwiekerlaand}}
 [[Kategorie:Sallaands artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Stienwiekerlaand]]
