*Empty MediaWiki Message*

--- a/Sint_Jansklooster.mw
+++ b/Sint_Jansklooster.mw
@@ -23,6 +23,7 @@ Buten Sint Jansklooster leit et [[Bezukerscentrum De Wieden]] van [[Netuurmoneme
 *[http://www.svvhk.nl/ Sportverieniging VHK]
 *[http://www.sdgsintjansklooster.nl/ Kr. meziekverieniging SDG]
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs_artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Stienwiekerlaand]]
