*Empty MediaWiki Message*

--- a/Stienwiekerwoold.mw
+++ b/Stienwiekerwoold.mw
@@ -4,6 +4,7 @@
 ==Geboren in Stienwiekerwoold==
 * [[Johannes ter Schure]] (21 juni 1922) - bisschop van [[Bisdom Den Bosch|Den Bosch]]
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs_artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Vroggere gemiente in Oaveriessel]]
