--- a/Wannepervene.mw
+++ b/Wannepervene.mw
@@ -16,6 +16,7 @@ Een bi'jnaeme veur de inwoners van Wannepervene is ''toezebollen''.
 ==Uutgaonde verwiezing==
 * [http://www.wanneperveen.nl Webstee van Wannepervene]
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eskreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
