*Empty MediaWiki Message*

--- a/Willemsoord_(Stienwiekerlaand).mw
+++ b/Willemsoord_(Stienwiekerlaand).mw
@@ -3,6 +3,7 @@
 == Uutgaonde verwiezing ==
 * [http://www.viamichelin.com/viamichelin/gbr/dyn/controller/mapPerformPage?strCP=8338&strLocation=Willemsoord&strCountry=285 Lekaosie van Willemsoord]
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Stienwiekerlaand]]
