*Empty MediaWiki Message*

--- a/Baarlo_(Stienwiekerlaand).mw
+++ b/Baarlo_(Stienwiekerlaand).mw
@@ -5,6 +5,7 @@ Baarlo lig niet wied of van et stattien [[Blokziel]], naobi'j de perveensiaole w
 
 Wat plaetsen die in de buurt liggen, bin naost Blokziel, [[Moggebiet]], [[Scheerwoolde]] en [[Wetering (Overiessel)|Wetering]].
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
