*Empty MediaWiki Message*

--- a/Baors_(gehucht).mw
+++ b/Baors_(gehucht).mw
@@ -10,6 +10,7 @@ Ten zuden van Baars viej, tussen de snelweg en de spoorliende Arnhem - Liwwadden
 </references>
 </div>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
