--- a/Basbeke.mw
+++ b/Basbeke.mw
@@ -3,6 +3,7 @@
 
 De buurtschop lig in de [[Kop van Overiessel]], in et oosterd van de [[Pervinciaole weg 331|perveensiaole weg N331]], die plaetselik de Oppenswolle het. Basbeke bestaot uut een lange, mit een fikse bochte lopende weg mit wat verspreide [[Lintdörp|lintbebouwing]]. De weg lop van [[Sint Jansklooster|Et Klooster]] tot dichtebi'j et [[Zwärte Meer|Zwatte Meer]].
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
