--- a/Basse_(Steenwiekerlaand).mw
+++ b/Basse_(Steenwiekerlaand).mw
@@ -3,6 +3,7 @@
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
