--- a/Basserveld.mw
+++ b/Basserveld.mw
@@ -8,6 +8,7 @@ Mit de [[Meulehoeke]] vaalt et Basserveld onder de buurtschop [[Basse (Steenwiek
 </references>
 </div>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
