*Empty MediaWiki Message*

--- a/Blauwe_Haand.mw
+++ b/Blauwe_Haand.mw
@@ -5,6 +5,7 @@ De buurtschop lig tussen de [[Beulakerwiede]] en de [[Belterwiede]], bi'j de dri
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
