*Empty MediaWiki Message*

--- a/De_Bulte_(Stienwiekerlaand).mw
+++ b/De_Bulte_(Stienwiekerlaand).mw
@@ -14,6 +14,7 @@ De Bulte lig in een glooiend laandschop mit bossen, ieuwenolde laenen, gröslaen
 </references>
 </div>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
