--- a/Dinxtervene.mw
+++ b/Dinxtervene.mw
@@ -1,4 +1,4 @@
-'''Dinxtervene''' ([[Nederlaands|Nederlaans]]: ''Dinxterveen'') is een [[daarp|dörp]] in de [[Oaveriessel|Overiesselse]] [[gemiente (bestuur)|gemiente]] [[Stienwiekerlaand]]. De naeme 'Dinxtervene' is een verbastering van et woord ''Dingstedervene'', een stok laand an et Meppelerdiep van de bisschop die daor verbleef. Dit had de naeme 'Dingstede' en lag in et gebied dat ''Dingspil'' hiette. Disse naeme betekent letterlik ''de gerechtsplak''.
+'''Dinxtervene''' ([[Nederlaands|Nederlaans]]: ''Dinxterveen'') is een [[daarp|dörp]] in de [[Oaveriessel|Overiesselse]] [[gemiente (bestuur)|gemiente]] [[Stienwiekerlaand]]. De naeme 'Dinxtervene' is een verbastering van et woord ''Dingstedervene'', een stok laand an et [[Meppelerdiep]] van de bisschop die daor verbleef. Dit had de naeme 'Dingstede' en lag in et gebied dat ''Dingspil'' hiette. Disse naeme betekent letterlik ''de gerechtsplak''.
 
 {{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs artikel]]
