*Empty MediaWiki Message*

--- a/Heetveld.mw
+++ b/Heetveld.mw
@@ -4,6 +4,7 @@ Heetveld lig kotbi'j [[Sint Jansklooster|Et Klooster]]. Et dörp is te berieken 
 
 In Heetveld hej et [[geologie|geologisch]] monument '[[de Zaandkoele]]'. Daor is op een mit holtsnippers en schulpen emeuken kaorte van Skandinavië de herkomst van verschillende soorten zwarfkeien an-egeven. Ok is d'r een kleine ofgraving mit een keileemwand.
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
