*Empty MediaWiki Message*

--- a/Jonen_(Steenwiekerlaand).mw
+++ b/Jonen_(Steenwiekerlaand).mw
@@ -8,6 +8,7 @@ Jonen kuj niet mit de auto bi'j koemen, d'r lop enkeld een fietspad deur.
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
