*Empty MediaWiki Message*

--- a/Kadoelen_(Overiessel).mw
+++ b/Kadoelen_(Overiessel).mw
@@ -11,6 +11,7 @@ In de buurte van Kadoelen lig et [[Kadoelermeer]].
 ==Uutgaonde verwiezing==
 * [http://www.henkvanheerde.nl/vollenhove/Oldenhof/oldenhof.htm Ziede over de havezate Oldenhof]
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
