*Empty MediaWiki Message*

--- a/De_Klosse.mw
+++ b/De_Klosse.mw
@@ -7,6 +7,7 @@ De Klosse is begun 19e eeuw ontstaon rondum een [[tolhuus]] op de Gasthuusdiek t
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
 [[Kategorie:Drèents artikel]]
