--- a/De_Krieger.mw
+++ b/De_Krieger.mw
@@ -1,5 +1,6 @@
 '''De Krieger''' is een [[buurtschop]] in de gemiente [[Steenwiekerlaand]], in de Nederlaandse perveensie [[Overiessel]]. De buurtschop lig in et zuden van de gemiente, tussen [[Veno]] en [[Gellemuden]].
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
