--- a/De_Kolke_(Dreanthe_en_Oaveriessel).mw
+++ b/De_Kolke_(Dreanthe_en_Oaveriessel).mw
@@ -8,6 +8,7 @@ De buurtschop vaalt grotendiels onder et Dreentse dorp [[Koldervene]], diels ond
 </references>
 </div>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
