*Empty MediaWiki Message*

--- a/Leeuwte_(Steenwiekerlaand).mw
+++ b/Leeuwte_(Steenwiekerlaand).mw
@@ -9,6 +9,7 @@ Ok staot d'r et olde [[boerderieje|spil]] van [[Evert van Benthem]], de winnaar 
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
