--- a/Mari'jenkaampen.mw
+++ b/Mari'jenkaampen.mw
@@ -5,6 +5,7 @@ An et begun van de 20e eeuw wodden d'r espreuken van Huttenberg. Et gebied waor 
 
 Mari'jenkaampen is ontstaon naodat de [[Maatschappij van Weldadigheid]] de [[klonie (staotkundig)|klonie]] [[Willemsoord (Steenwiekerlaand)|Willemsoord]] esticht had. Sommige van de bewoners van Willemsoord (veural jongere, uut de klonie vot-estuurde kolonisten), vestigden heur in de direkte omgeving in haostig op-etrökken plaggenhutten. Ze vörmden de zogenuumde desperadoklonies zoas in [[Ni'jensleek]], [[Vleddervene (Drenthe)|Vleddervene]], [[Noordwoolde|Noordwoolde-Zuud]] en Mari'jenkaampen.
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
