--- a/Moespot.mw
+++ b/Moespot.mw
@@ -6,6 +6,7 @@
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
