*Empty MediaWiki Message*

--- a/Moggenbeet_(plaats).mw
+++ b/Moggenbeet_(plaats).mw
@@ -12,6 +12,7 @@ Moggenbeet lig in et [[Nationaal Park Weerribben-Wieden]].
 </references>
 </div>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
