--- a/Nederlaand_(Overiessel).mw
+++ b/Nederlaand_(Overiessel).mw
@@ -23,6 +23,7 @@ Ofbeelding: Ooievaarsnest Weerribben.jpg|Eileuvernust op Nederlaand
 ==Rifferenties==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
