*Empty MediaWiki Message*

--- a/Onna_(Oaveriessel).mw
+++ b/Onna_(Oaveriessel).mw
@@ -10,6 +10,7 @@ Onna bestund al in 1313, toen et as Unne enuumd wodden in een dokement over een 
 
 Veur de naeme bin verschillende betekenissen op-ewurpen: et zol 'weide' kunnen betekenen, of 'gien waeter' (on-a), wat slaon zol op de heugte en dreugte van de plaetse. Een aandere verklaoring is dat et 'golvend laandschop' zol betekenen, van et [[Latien]]se ''unda''.
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
