--- a/Paosloo.mw
+++ b/Paosloo.mw
@@ -3,6 +3,7 @@
 
 Et dörp het een Hervormde karke uut de [[16e eeuw|16e ieuw]]. Et schip van de karke komt overiene mit een Overiesselse [[boerderieje|boerderi'je]]. In Paosloo staot de ienigste [[tonmeulen]] van Nederlaand.
 
+{{Stienwiekerlaand}}
 [[Kategorie:Stellingwarfs_artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Stienwiekerlaand]]
