*Empty MediaWiki Message*

--- a/De_Polle_(Stienwiekerlaand).mw
+++ b/De_Polle_(Stienwiekerlaand).mw
@@ -1,5 +1,6 @@
 '''De Polle''' ([[Nederlaands|Nederlaans]]: ''De Pol'') is een plaetse en [[wiek]] in de gemiente [[Stienwiekerlaand]] in de [[Nederlaand|Nederlaanse]] perveensie [[Oaveriessel|Overiessel]].
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
