--- a/Roekebosch.mw
+++ b/Roekebosch.mw
@@ -5,6 +5,7 @@ Roekebosch lig tussen [[Gieteren]], [[Wannepervene]] en [[Ni'jevene]].
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
