*Empty MediaWiki Message*

--- a/Ronduute.mw
+++ b/Ronduute.mw
@@ -12,6 +12,7 @@ Op 6 december 1944, in de [[Tweede Wereldoorlog]], stortten in Ronduute een Amer
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
