*Empty MediaWiki Message*

--- a/Iesselham.mw
+++ b/Iesselham.mw
@@ -13,6 +13,7 @@ Tot en mit 1972 heurde Iesselham bi'j de [[gemiente Ooldemaark]]. De gemiente Ie
 </references>
 </div>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
