*Empty MediaWiki Message*

--- a/Witte_Peerden.mw
+++ b/Witte_Peerden.mw
@@ -10,6 +10,7 @@ De naeme Witte Peerden komp van een harbarg an de weg tussen [[Zwolle]] en [[Liw
 ==Rifferensies==
 <references/>
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
