*Empty MediaWiki Message*

--- a/Zuudaende_(Stienwiekerlaand).mw
+++ b/Zuudaende_(Stienwiekerlaand).mw
@@ -2,6 +2,7 @@
 
 Net as Gieteren, wodt Zuudaende karakteriseerd deur boerderi'jen, grachten en broggies en is der botenverhuur.
 
+{{Stienwiekerlaand}}
 {{Dia|Dit stok is eschreven in et [[Stellingwarfs]] van [[Stienwiekerlaand]].}}
 
 [[Kategorie:Stellingwarfs artikel]]
