--- a/Hellmanngetal.mw
+++ b/Hellmanngetal.mw
@@ -1,7 +1,7 @@
 Et '''Hellmanngetal''', ook wel '''koldegetal''' ([[Nederlaands]]: '''''koudegetal'''''), is een meniere um de totaole hoevölheid kolde te meten van de hiele winter. Et Hellmanngetal (H) wördt emeten van 1 november töt 31 meert. Et is vernuumd nao de [[Duutslaand|Duutse]] [[meteorologie|meteoroloog]] [[Gustav Hellmann]]. Een andere meniere um de strengheid van een winter te meten is et [[Vörstgetal van IJnsen|vörstgetal]] (van IJnsen). Veur de zommer bestiet er een soortgeliek iets, nämelik et [[warmtegetal]]. 
 
 ==Bepaoling en naodielen==
-Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur leger dan et vröspunt bie mekare op te tellen. An et ende wördt et minteken vot elaoten. Zo geaft twie dagen met een gemiddelde temperetuur van -1,2°C en -0,3°C een Hellmanngetal van 1,5. Een naodiel van disse meniere is det een winter met völle nachtvörst met oaverdag tempereturen ruum baoven de nul graoden niet vlug een heug(er) Hellmanngetal hef. An de aandere kaante kan een warme winter met een paor iesdagen al rap een heuger Hellmanngetal kriegen. Een veurbield is de winter van 2011-2012.
+Et Hellmanngetal wördt berekkend deur de dagen met een gemiddelde temperetuur leger dan et vröspunt bie mekare op te tellen. An et ende wördt et minteken vot elaoten. Zo geaft twie dagen met een gemiddelde temperetuur van −1,2°C en −0,3°C een Hellmanngetal van 1,5. Een naodiel van disse meniere is det een winter met völle nachtvörst met oaverdag tempereturen ruum baoven de nul graoden niet vlug een heug(er) Hellmanngetal hef. An de aandere kaante kan een warme winter met een paor iesdagen al rap een heuger Hellmanngetal kriegen. Een veurbield is de winter van 2011-2012.
 
 '''Classificaotie in Nederlaand:'''
 
@@ -108,3 +108,4 @@ De winter van 2013-2014 was de eerste winter sinds minstens 1901 die nul punten 
 <references/>
 * [http://www.wzforum.de/forum2/read.php?6,1453354,1454308 Hellmanngetallen vanaf 1750 in Basel, Berlien, Praag, Frankfurt, Dresden, etc.]
 {{Dialekt|sdz}}
+[[Kategorie:Weerkunde]]
