--- a/Lierderholthuus.mw
+++ b/Lierderholthuus.mw
@@ -1,4 +1,4 @@
-'''Lierderholthuus''' ([[Nederlaands|Nederlaans]]: ''[[Lierderholthuis]]'') is een gehuch in de [[Overiessel]]se gemiente [[Raolte]], in [[Sallaand]]. 't Had in 2007 ongeveer 416 inwoners.
+'''Lierderholthuus''' ([[Nederlaands|Nederlaans]]: ''Lierderholthuis'') is een gehuch in de [[Overiessel]]se gemiente [[Raolte]], in [[Sallaand]]. 't Had in 2007 ongeveer 416 inwoners.
 
 Lierderholthuus lig in noordwestelijke richting ongeveer tien kilemeter van Raolte. Noe lig 't in-eklemd tussen de [[Iessel]] an de linkerzied en de [[spoorliende]] [[Zwolle]]-Raolte an de rechterzied. An de overzied van de spoorweg lig [[Heino (Roalte)|Heino]].
 
