*Empty MediaWiki Message*

--- a/Roevène.mw
+++ b/Roevène.mw
@@ -26,6 +26,7 @@ De Roevèènsen hebt heur eing volkslied, ''[[Bi'j de grote watertoren]]'', in 1
 * [http://www.staphorst.nl/ Webstee van de gemiente Stappest] 
 * [http://www.staphorst.org/ Infermaotie oaver Stappest en Roevène]
 
+{{Stappest}}
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
 [[Kategorie:Drèents artikel]]
