*Empty MediaWiki Message*

--- a/De_Rieverst.mw
+++ b/De_Rieverst.mw
@@ -34,6 +34,7 @@ Uut [http://www.historieijhorst.nl/p23.html ''Het Rieverst Dorpien''] deur Arend
 *[http://www.derieverst.nl/ Portaol De Rieverst]
 *[http://www.historieijhorst.nl/ De historie van IJhorst]
 
+{{Stappest}}
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]].}}
 
 [[Kategorie:Drèents_artikel]]
