*Empty MediaWiki Message*

--- a/Haalfweg.mw
+++ b/Haalfweg.mw
@@ -7,6 +7,7 @@ Vanuut 't dörp [[Stappest]] kooj via Haalfweg an 't dörpien [[De Rieverst]]. A
 
 't Eetkefee is mit bekend deur de anwezigheid van een [[stoark|eileuversnöst]] op 't dak, daoras alle jaoren een eileuverpaar bröd. Dichtebi'j hej 't eileuverstesjon [[De Lokkeri'je]], daoras alle jaoren tientallen eileuvers heur [[Aai (dier)|eier]] uutbruudt. In augustus kuj in de umgeving vake hiele parti'jen eileuvers antreffen, veurdet die naor 't zuden vliegt veur de oaverwintering.
 
+{{Stappest}}
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
 [[Kategorie:Drèents_artikel]]
