--- a/De_Lichtmis.mw
+++ b/De_Lichtmis.mw
@@ -32,6 +32,7 @@ Busliende 40 (Zwolle - Möppelt - Stienwiek) en in de spits snelbus 83direkt (Zw
 {{Dia|Dit stok is eskreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 {{mal:zwolle}}
 {{mal:zwolle buurtschoppen}}
+{{Stappest}}
 
 
 [[Kategorie:Drèents_artikel]]
