--- a/Mense.mw
+++ b/Mense.mw
@@ -1,5 +1,5 @@
 [[Bestaand:PPlaquecloseup.svg|200px|thumb|De mense]]
-'''Meanse''' of ('n wetenschaplike name) Homo Sapiens (Latijn: verstaandige of wieze meanse) is 'n tweevoetige primatensoort uut de superfamilie Hominidae. Onderzuuk op DNA wes d'r op dat de hudige meanse oongeveer 200.000 joar eledene in Afrika is onstoane. De meanse hef 'n goed ontwikkelden kop. Dorumme kan 'e abstrakt deanken, kan 'e proaten, perblemen oplössen en hef 'e uut-ebreeide emoties. Dit hef 'e dan gelieke met aandere meansapen, as chimpansees, bonobo's en gorilla's, mar ok ölliefanten en dolfienn. Deur dat 'e recht op löp kan 'e vri-j met zienn arms bewegen, en doardeur veurwarpen maken en gebruken. De meanse is oaver de hele weerld verspreeid en op alle continentn beholve Antartica komt grote populaties veur. In juli 2008 was 't totale antal meansen op 'n aarde groter as 6,7 miljard luu, eand oktober 2011 telden de aarde heur 7 miljardste meanse. Der is slechts nog iene lewende ondersoort: Homo sapiens sapiens.
+'''Meanse''' of ('n wetenschaplike name) Homo Sapiens (Latijn: verstaandige of wieze meanse) is 'n tweevoetige primatensoort uut de superfamilie Hominidae. Onderzuuk op DNA wes d'r op dat de hudige meanse oongeveer 200.000 joar eledene in Afrika is onstoane. De Jebel Irhoud vondsten wiest wieder terugge: 300.000 jaor eleden. De meanse hef 'n goed ontwikkelden kop. Dorumme kan 'e abstrakt deanken, kan 'e proaten, perblemen oplössen en hef 'e uut-ebreeide emoties. Dit hef 'e dan gelieke met aandere meansapen, as chimpansees, bonobo's en gorilla's, mar ok ölliefanten en dolfienn. Deur dat 'e recht op löp kan 'e vri-j met zienn arms bewegen, en doardeur veurwarpen maken en gebruken. De meanse is oaver de hele weerld verspreeid en op alle continentn beholve Antartica komt grote populaties veur. In juli 2008 was 't totale antal meansen op 'n aarde groter as 6,7 miljard luu, eand oktober 2011 telden de aarde heur 7 miljardste meanse. Der is slechts nog iene lewende ondersoort: Homo sapiens sapiens.
 
 Meansen bint, ewen-as de mieste aandere primaten, sociaal van eerd. Zi'j bint biezunder bedrewen in 't gebruuk van komunikatiemiddelen veur zölfexpressie, uutwisseling van ideen en organisatie. Meansen maakt völle, muuilike sosjale netwarken; die bestaot uut talrieke samenwarkende en konkurrerende grupen, die uutiene-löp van famillies töt naties, ethiek, nörms, weerden en wetten töt staand ebrach, die samen de basis vörmt veur d' meansliken samenlewing.
 == Zie ok ==
