--- a/Sokkeloa.mw
+++ b/Sokkeloa.mw
@@ -19,6 +19,7 @@ n Overzichtsartikel over de ienvloed van de effekten van sokkeloa is ien maai [[
 * [[Graafschopper Platt]]: ''soekkelaa'' (Platduutse schriefwieze ''Sukkelaa'')
 * [[Grunnegs]]: ''sokkeloa(t)'', ''sukkeloa(t)''
 * [[Veluws]]: ''sukelao''
+*[[Sallaands]]: ''sukelao''
 * [[Stellingwarfs]]: ''sukelao''
 * [[Tweants]]: ''sokkelaa''
 
