--- a/Booschap_(winkel).mw
+++ b/Booschap_(winkel).mw
@@ -6,6 +6,7 @@ In t taalgebruuk wordt mit n boosschap meestentieds bedoeld t kopen van één of
 == [[Nedersaksies]] ==
 * [[Drèents]]: ''bosschop'', ''bosschup'', ''bosskop''
 * [[Grunnegs]]: ''bösschop''
+*[[Sallaands]]: ''bosschop'', ''bosskop'' (o.a. [[Zwolle]])
 * [[Stellingwarfs]]: ''bosskop''
 * [[Tweants]]: ''bodskop'' (oetsprekken as ''boskop'')
 * [[Veluws]]: ''booschap''
