--- a/Koronavirussen.mw
+++ b/Koronavirussen.mw
@@ -29,7 +29,7 @@ Timothy D. Mchugh
 Ziad A. Memish
 Christian Drosten
 Alimuddin Zumla
-Eskild Petersen. "The continuing 2019-nCoV epidemic threat of novel coronaviruses to global health — The latest 2019 novel coronavirus outbreak in Wuhan, China". International Journal of Infectious Diseases. Skreaven up 14 januari 2020.] Bekeaken up 13 määrt 2020.</ref> Et virus likt vöär 96% up vleadermuuskorona. Der is een breyd vermoden dat et virus van vleadermüse kümt. De seekde verspreidden sik rap oaver de wearld, wårnå verskillende landen et oapenbåre leaven, de ekonomy en reisegeleagenheiden gooddeyls stille legden.
+Eskild Petersen. "The continuing 2019-nCoV epidemic threat of novel coronaviruses to global health — The latest 2019 novel coronavirus outbreak in Wuhan, China". International Journal of Infectious Diseases. Skreaven up 14 januari 2020.] Bekeaken up 13 määrt 2020.</ref> Et virus likt vöär 96% up vleadermuuskorona. Der is een breyd vermoden dat et virus van vleadermüse kümt. De seekde verspreidden sik rap oaver de wearld, wårnå verskillende landen et oapenbåre leaven, de ekonomy en reisegeleagenheiden gooddeyls stille legden. Up 19 januari 2021 üm 10:30 waren er al meyr as 2 miljoon douden en 96 miljoon bevästigde besmettingen.
 
 ==Verwysingen==
 
