*Empty MediaWiki Message*

--- a/Erg.mw
+++ b/Erg.mw
@@ -1,6 +1,6 @@
 Een '''Erg''' kan verwiezen naor:
 
-*Een [[Zaandzee]]
-*Een ienheid [[Erg (ienheid)]]
+*Een [[zaandzee]]
+*Een ienheid [[erg (ienheid)]]
 
 {{dv}}
