Sortering van [[:Kategorie:Zaandzee]] anpasd naor " " ([[Wikipedia:HotCat|HotCat.js]])

--- a/Zaandzee.mw
+++ b/Zaandzee.mw
@@ -9,5 +9,5 @@ De miest grote zaandzee op eerde is et [[Lööge Kertier]] (Rub al-Khali) in [[S
 <references />
 
 {{Dialekt|sdz}}
-[[Kategorie:Zaandzee]]
+[[Kategorie:Zaandzee| ]]
 [[Kategorie:Laandvörm]]
