--- a/Zaandzee.mw
+++ b/Zaandzee.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Morocco_Africa_Flickr_Rosino_December_2005_84514010.jpg|rechts|duum|[[Erg Chebbi]] in [[Marokko]]]]
+[[Bestaand:Morocco_Africa_Flickr_Rosino_December_2005_84514010.jpg|rechts|duum|[[Erg Chebbi|Ärg Chebbi]] in [[Marokko]]]]
 Een '''zaandzee''' (ook wel '''ärg''' ('''erg'''), '''duunzee''' of '''zaandvlakte''') is een [[Duun|zaandduungebied]] det groter is as 125 veerkaante kilometer en in et binnenlaand lig.<ref name=":0">Sam Boggs Jr. (2010): ''Principles of Sedimentology and Stratigraphy'', Vierde druk, Pearson Prentice Hall, Upper Saddle River NJ, blz. 258 ISBN 978-0-13-136763-0</ref> Ook mut de öppervlakte veur meer as 20% met zaand bedekt wean.<ref>[https://www.agc.army.mil/desert_guide/lsmsheet/lsseas.htm "Summary: Sand Seas/Ergs/Dune Fields"]. ''Desert Guide''. [[:en:United_States_Army_Corps_of_Engineers|United States Army Corps of Engineers]]. Op ezöch op 18 meei 2006</ref>
 
 Saomen met dunen maakt ärgs zo'n 20% van de hudige [[Woestien|woestienen]] uut en zo'n 6% van al et laandöppervlak. In de [[Sahara]] komt völle ärgs veur die soms wel groter bint as 500.000 veerkaante kilometer.<ref name=":0" /> Ärgs bint veural te vinden tussen 20° töt 40° graoden noorderbreedte en 20° töt 40° graoden zuderbreedte.
