*Empty MediaWiki Message*

--- a/Willem_van_der_Veen.mw
+++ b/Willem_van_der_Veen.mw
@@ -8,3 +8,4 @@ In 1932 wördden hi'j geboren midden in et centrum van Zwolle.<ref name=":0">[ht
 <references />
 
 [[Kategorie:Zwolle]]
+[[Kategorie:Schriever in 't Sallaans]]
