--- a/Willem_van_der_Veen.mw
+++ b/Willem_van_der_Veen.mw
@@ -1,4 +1,4 @@
-'''Willem van der Veen''' ([[Zwolle]], [[1932]]) is een [[Zwolle|Zwols]] schriever, theaterschriever en veurmälig [[journalist]] en theaterrecensent veur de [[Zwolse Courant]]. 
+'''Willem van der Veen''' ([[Zwolle]], [[1932]]) is een [[Zwolle|Zwols]] schriever, theaterstukschriever en veurmälig [[journalist]] en theaterrecensent veur de [[Zwolse Courant]]. 
 
 In 1932 wördden hi'j geboren midden in et centrum van Zwolle.<ref name=":0">[https://www.weblogzwolle.nl/nieuws/87810/afscheid-willem-van-der-veen-van-het-zwols-historisch-tijdschrift.html Afscheid Willem van der Veen van het Zwols Historisch Tijdschrift] (webblog Zwolle)</ref> Hi'j hef meer as veertig jaor as journalist bi'j de Zwolse Courant ewärkt.<ref>[http://www.detaalvanoverijssel.nl/plaats/auteur/id:19#verhaal_106 De taal van Overijssel. Auteurs Uit Zwolle - Willem van der Veen]</ref> Daornaost hef e därtig jaor met edaon an et [[Zwols Historisch Tijdschrift]] van de [[Zwolse Historische Vereniging]]. In [[2020]] scheidden hi'j hier met uut.<ref name=":0" /> Veur et tiedschrift schreef hi'j oaver de geschiedenisse van Zwolle. Twie hiele themanommers staot op zien näme: ''De Busse van Skutte'' (2004) en ''Harro en Carina Bouman, een bijzonder echtpaar op Koestraat 18'' (2005). Hi'j maakten ook gedichen oaver Zwolle waorin e de sfeer van de stad goed wus te beschrieven zo as in: ''De Pelikaan'', ''Diezerstraote'' en ''Hoornstegien''.
 
