--- a/Portaol:Nedersaksische_cultuur.mw
+++ b/Portaol:Nedersaksische_cultuur.mw
@@ -93,7 +93,7 @@ __NOTOC__ __NOEDITSECTION__
 |width=50% bgcolor=white style="border-style:solid;border-width:1px;border-color:silver;padding:1em;padding-top:0;"|
 <span style="font-size:larger;font-weight:bold;">Meziekgroepen en zangers</span>
 [[File:Daniel_Lohues_(2018).jpg|left|170px|Daniël Lohues]]
-[[Boh Foi Toch]] ♪ [[Bukkes]]<br />
+[[Boh Foi Toch]] ♪[[Bökkers]]♪ [[Bukkes]]<br />
 [[Duo Karst]] ♪ [[Höllenboer]]<br />
 [[Jajem (band)|Jajem]] ♪ [[Bennie Jolink]]<br />
 [[Jovink en de Voederbietels]]<br />
