*Empty MediaWiki Message*

--- a/Partij_van_de_Arbeid.mw
+++ b/Partij_van_de_Arbeid.mw
@@ -1,4 +1,4 @@
-De '''Partij van de Arbeid''' (Parti'je van den Arbeid) of PvdA is ne Nederlaandse landelike politieke parti'je die op 9 februari [[1946]] is op ericht.. De politieke streuming van de PvdA wörd progressief en sosiaaldemokraties eneumd. Internatsionaal ezene mek ze deel oet van de [[Partij van de Europese Sociaaldemocraten|Parti'je van de Europese Sosiaaldemokraten]]. [[Lodewijk Asscher]] is sund 2016 den politieken anvoerder maar is in 2021 estopt vanweage de [[Toeslagenaffaire]]. [[Lilliane Ploumen]] is now de parti'jleider. [[Hans Spekman]] was van 2012 töt den [[parti'jveurzitter]]. Sund 2017 is det [[Nelleke Vedelaar]]. In den [[Tweeden Kamer]] haalden de parti'je in 2012 38 zettels, in 2017 9 zettels.
+De '''Partij van de Arbeid''' (Parti'je van den Arbeid) of PvdA is ne Nederlaandse landelike politieke parti'je die op 9 februari [[1946]] is op erich. De politieke streuming van de PvdA wörd [[progressief (politiek)| progressief]] en [[sosiaaldemokraties]] eneumd. Internatsionaal ezene mek ze deel oet van de [[Partij van de Europese Sociaaldemocraten|Parti'je van de Europese Sosiaaldemokraten]]. [[Lodewijk Asscher]] is sund 2016 den politieken anvoerder maar is in 2021 op estapt vanweage zien rolle bie de [[Toeslagenaffaire]]. [[Lilliane Ploumen]] is now de parti'jleider. [[Hans Spekman]] was van 2012 töt den [[parti'jveurzitter]]. Sund 2017 is det [[Nelleke Vedelaar]]. In den [[Tweeden Kamer]] haalden de parti'je in 2012 38 zettels, in 2017 9 zettels.
 
 {{Dialekt|act}}
 
