--- a/Korhoonder.mw
+++ b/Korhoonder.mw
@@ -7,7 +7,10 @@ n Haann is ongevear 50 cm laank, is zowat helemoal zwart met her en der wit op d
 ==Vuurkomn==
 Korhoonders tref iej in n groot deel van t noordn van [[Europa (continent)|Europa]], ook in [[België]] en [[Neerlaand]]. t Korhoonder is in Europa nen kultuurvolger. Van oorspoonk kon t zik good redn in haalflösse boargbossen met [[moor (toponiem)|morrelaandn]] en [[heed]]e. Doo't de roewe groondn oontgunn wördn, kree'j in t oostn van Neerlaand hele heedevlaktes, woer't t korhoonder zik good redn kon. Doo't de heedeveeldn verdweenn, dr mear toeristn ofkömn op t de oawerbleewne stukn, en t gebeed verdreugn, is dr weainig van de korhoonders oawerbleewn. Dit geeldt vuur heel Europa.
 
-Op de [[Sallaand]]se heuwelrugge bie [[Hooltn]] probeert ze al verskeaidene joar de leste korhoonders te redn. Dr wördn zelfs in [[2012]] vuur €90.000,- spesjale korhoonders oet [[Zweedn]] in evlöagn, dee't vuur niej blood mossen zorgen. Dit leek good te goan; dr warn broodkoppels en zelfs verskeaidene eier oet ekömn. Op [[7 juli]] [[2012]] meeldn [[De Twentsche Courant Tubantia]] skoonwal det dr 28 kuukns dood warn egoan. Det gebuurn de vuurgoande dree joar ook al.<ref>[http://www.tctubantia.nl/regio/11346878/Kuikens-korhoenders-sterven-massaal.ece TCtubantia.nl. ''Kuikens korhoenders sterven massaal.''] Skreewn en bekekn op 7 juli 2012.</ref> Oet oonderzeuk bleek at de kuukns te weainig etn hadn ehad. Dit keump woarskienlik umdet dr vuur t korhoonder op de Sallaandse Heuwelrugge nit genog etn te veendn is. Tookn joar wil [[Stoatsbosbehear]] vuur n poar ton nog es 20 töt 25 korhoonders oet Zweedn loatn komn en goan bievoorn met spesjaal ekweekte [[spreenkhaann]]. Nit alle lokale ambtenoarn zeent t doar met eens.<ref>[http://www.tctubantia.nl/regio/reggestreek/11358205/%26lsquo%3BKorhoen-geldverspilling%26rsquo%3B.ece TCTubantia. "Korhoen Geldverspilling".] Skreewn en bekekn op 9 juli 2012</ref>
+Op de [[Sallaand]]se heuwelrugge bie [[Hooltn]] probeert ze al verskeaidene joar de leste korhoonders te redn. Dr wördn zelfs in [[2012]] vuur €90.000,- spesjale korhoonders oet [[Zweedn]] in evlöagn, dee't vuur niej blood mossen zorgen. Dit leek good te goan; dr warn broodkoppels en zelfs verskeaidene eier oet ekömn. Op [[7 juli]] [[2012]] meeldn [[De Twentsche Courant Tubantia]] skoonwal det dr 28 kuukns dood warn egoan. Det gebuurn de vuurgoande dree joar ook al.<ref>[http://www.tctubantia.nl/regio/11346878/Kuikens-korhoenders-sterven-massaal.ece TCtubantia.nl. ''Kuikens korhoenders sterven massaal.''] Skreewn en bekekn op 7 juli 2012.</ref> Oet oonderzeuk bleek at de kuukns te weainig etn hadn ehad. Dit keump woarskienlik umdet dr vuur t korhoonder op de Sallaandse Heuwelrugge nit genog etn te veendn is. Et joar der op wol [[Stoatsbosbehear]] vuur n poar ton nog es 20 töt 25 korhoonders oet Zweedn loatn komn en goan bievoorn met spesjaal ekweekte [[spreenkhaann]]. Nit alle lokale ambtenoarn warren t doar met eens.<ref>[http://www.tctubantia.nl/regio/reggestreek/11358205/%26lsquo%3BKorhoen-geldverspilling%26rsquo%3B.ece TCTubantia. "Korhoen Geldverspilling".] Skreewn en bekekn op 9 juli 2012</ref>
+
+Oet onofhaankelik oonderzeuk bleek in 2021 at et heel iets antreuk met de korhoonder in Sallaand. Der warn zeuwn haann en darteen henn, wat bedudend mear was as de joarn der vuur. Toch was dat nog nit genog um de deers zelfstaandig te loatn oawerleawn.<ref>[https://www.rijssen-holtensnieuwsblad.nl/nieuws/algemeen/1041061/-korhoenders-doen-het-ietsje-beter- Rijssen-Holtens Nieuwsblad. 'Korhoenders doen het ietsje beter'. Skreven en bekekken op 20 januwoari 2021.]</ref>
+
 
 ==Verwiezingn==
 <references/>
