*Empty MediaWiki Message*

--- a/Joe_Biden.mw
+++ b/Joe_Biden.mw
@@ -1,11 +1,13 @@
 [[File:Joe Biden official portrait 2013.jpg|thumb|200px|Joe Biden]]
 
-'''Joseph Robinette Biden Jr.''' ([[20 november]] [[1942]]) is nen [[Vereynigde Ståten|amerikaansken]] politiker en tüsken 2009 töt 2017 was hee vicepresident. Hee kümt uut vöär de [[demokratiske partye|demokraten]] en was nen [[amerikaanske senaat|senator]] tüsken [[1973]] en [[2009]]. Hee was presidentskandidåt in de verkesingsrunde van 2020, as teagenstander van den sittenden president [[Donald Trump]]. Nå ne stark ümstreadene verkesingsrunde wör hee döär et unafhangelike amerikaanske persbureau Associated Press uuteröypen töt winner. Dårmed solde hee den 46. president van de Vereynigde Ståten wörden ([[President-elect|p''resident-elect'']], den ''verköäsenen president'').<ref>[https://wearldsproake.nl/2020/11/07/joe-biden-koasen-tot-46-amerikaansken-president/ Wearldsproake.nl. "Joe Biden köäsen töt 46. amerikaansken president". Skreaven up 7 november 2020.] Bekekken up den 8. november 2020.</ref>
+'''Joseph Robinette Biden Jr.''' ([[20 november]] [[1942]]) is nen [[Vereynigde Ståten|amerikaansken]] politiker en tüsken 2009 töt 2017 was hee vicepresident. Seyd den [[20 jannewaori|20. january]] van [[2021]] is hee den 46. president van de [[Vereynigde Ståten]]. Hee kümt uut vöär de [[demokratiske partye|demokraten]] en was nen [[amerikaanske senaat|senator]] tüsken [[1973]] en [[2009]]. Hee was presidentskandidåt in de verkesingsrunde van 2020, as teagenstander van den sittenden president [[Donald Trump]]. Nå ne stark ümstreadene verkesingsrunde wör hee döär et unafhangelike amerikaanske persbureau Associated Press uuteröypen töt winner.  
 
 Biden wör geboren in [[Scranton]] in den ståt [[Pennsylvania]] en groiden up in [[New Caste County]] in [[Delaware]]. Hee studeerden an de Universiteit van Delaware en kreag synen rechtenbreev van de Universiteit van Syracuse in [[1968]]. Hee was rådslid van New Castle County in [[1970]] en up vyv nå den jungsten senator van de Vereynigde Ståten ooit. Hee was lange tyd lid van et Senaatskommittee van Butenlandske Saken, wåras hee uuteandelik vöärsitter van wör. Hee was teagen den [[Gulvoorlog]] van [[1991]], mär stünd achter de uutbreiding van et [[NAVO]]-verbund når [[Ousteuropa]] en et ingrypen in de [[Yugoslaviske Oorlöge]] nå 1990. Hee stünd ouk achter et besluut van den [[Irakoorlog]] in [[2002]], mär was teagen de upskåling van et antal manskappen in 2007. Ouk was hee vöärsitter van et Juridiske Senaatskommittee tüsken 1987 en 1995, wår as hee sik beasig höld med wetten up verdöyvende middel, kriminaliteitsbestryding en vrågstükken van volksvryheiden, sou as ne strengere wåpenwet en nen wet vöär gewald teagen vrouwlüde. In 1988 en 2008 stelden hee sik al es presidentskandidåt vöär de demokraten.
 
 Biden wör ses mål herköäsen vöär den Senaat, töt hee untslag nöm üm vicepresident under [[Barack Obama|Obama]] te wörden. In 2012 wörden se beide herköäsen. As vicepresident güng Biden oaver de Weagenspende van 2009 üm uut de swåre krisis te kommen. Ouk leidden hee verskeidene underhandelingen med de republikeinen oaver belastingen, wårmed under meyr ne belastingimpasse en nen skuldkrisis upelösd wörden. Hee makeden sik druk üm et russisk-amerikaanske verdrag oaver untmanteling van atoomwåpens der döär te krygen, stünd achter militäär ingrypen in [[Libië|Lybie]] en helpeden richtlynen upstellen vöär amerikaansk handelen in [[Irak]] en et terügtrekken van amerikaanske trupen in 2011. Nå de skeetpartye up de laegere skole van Sandy Hook hülp Biden ne taakgrup teagen skeetgeweld in de beyne. In Januari 2017 kreag hee van Obama de Presidentiäle Medaille van Vryheid, med underskeiding.
+
 In April 2019 kundigden Biden syn kandidåtskap vöär de verkesingen van 2020 an. In juni van 2020 haalden hee genog stemmen üm officiäle nominee van de demokraten te worden. Den 11. Augustus van dat jår kundigden hee Kamala Harris van [[Kalifornie]] an as syne anjaagster.
+
 
 {{DEFAULTSORT:Biden, Joe}}
 [[Kategorie:Tweants artikel]]
