*Empty MediaWiki Message*

--- a/Donald_Trump.mw
+++ b/Donald_Trump.mw
@@ -9,7 +9,7 @@ In [[juni]] [[2015]] kondigen Trump an at hee met zol doon an de presideantsverk
 
 Trump voort verskillende peunten dee hee as presideant wil anpakken: de VS mut vanniejs met [[Volksrippubliek China|Sjina]] um toafel um oawer haandelsofspraken te kuiern, hee is tegen haandelsofspraken zo as [[NAFTA]] en de [[Trans-Pacific Partnership]] (Oawerzeese Samenwoarking), der mut strakkere immigrasiewetten kommen, hee wil ne mure tusken de VS en [[Mexiko]] bouwen, veteranenzorg mut better, vervanging vuur de [[Affordable Care Act]] en meender [[belasting]]. Noa de [[Anslagen van Paries (2015)|Anslagen van Paries]] in [[2015]] wol Trump een tiedelik verbod op invlocht van [[Islam|Moslims]] in de VS. Later dreeien hee et zo det et verbod eankel zol geelden vuur leu oet laanden met een bewezen verleden in [[terrorisme]]. Pas as der ne gode moatstaf oontwikkeld was um der meugelike terroristen tuskenoet te halen, zol et verbod der achterhen goan.
 
-Tegen völle verwochtingen in wun Trump in november 2016 de verkiezingen van zinne demokratiese tegenstaandster [[Hillary Clinton]]. 
+Tegen völle verwochtingen in wun Trump in november 2016 de verkiezingen van zinne demokratiese tegenstaandster [[Hillary Clinton]]. Hee wör hiermet de 45e presideant van Amerika. 
 
 {{DEFAULTSORT:Trump, Donald}}
 [[Kategorie:Tweants artikel]]
