*Empty MediaWiki Message*

--- a/Lieste_van_presidenten_van_de_Vereanegde_Stoaten.mw
+++ b/Lieste_van_presidenten_van_de_Vereanegde_Stoaten.mw
@@ -479,14 +479,23 @@ Hieronder steet ne chronologiese '''lieste van [[president]]en van de [[Verienig
 |- 
 | align=center | 57
 |- 
-| rowspan=2 | '''45'''
-| rowspan=2 | [[Bestaand:Donald Trump Arizona 2016.jpg|100px|Barack Obama]]
-| rowspan=2 | [[Donald Trump]]
-| rowspan=2 | 20 januari 2017
-| rowspan=2 | Tot noo an too
-| rowspan=2 | [[Republikeinse Parti-je (Vereanegde Stoaten)|Republikeinse Parti-je]]
-| rowspan=2 | [[Mike Pence]]
+| '''45'''
+| [[Bestaand:Donald Trump Arizona 2016.jpg|100px|Barack Obama]]
+| [[Donald Trump]]
+| 20 januari 2017
+| 20 januari 2021
+| [[Republikeinse Parti-je (Vereanegde Stoaten)|Republikeinse Parti-je]]
+| [[Mike Pence]]
 | align=center | 58
+|-
+|'''46'''
+|[[Bestaand:Joe Biden official portrait 2013 cropped.jpg|duum|125x125px]]
+|[[Joe Biden]]
+|20 januari 2021
+|Tot noo an too
+|[[Demokratiese Parti-je (Vereanegde Stoaten)|Demokratiese Parti-je]]
+|[[Kamala Harris]]
+|59
 |}
 
 {{DEFAULTSORT:Presidenten Van De Vereanegde Stoaten}}
