*Empty MediaWiki Message*

--- a/20_jannewaori.mw
+++ b/20_jannewaori.mw
@@ -3,6 +3,8 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''20 jannewaori'''
 
 == Gebeurtenissen ==
 * [[1840]] - [[Willem II]] wonnen koning van [[Nederland]].
+*2017 - [[Donald Trump]] wonnen de 45e president van de [[Verenigde Staoten van Amerika]].
+*2021 - [[Joe Biden]] wonnen de 46e president van de [[Verenigde Staoten van Amerika]].
 
 == Geboren ==
 * [[1775]] - [[André-Marie Ampère]], Franse [[netuurkunde|netuurkundige]] († [[1836]]) 
