*Empty MediaWiki Message*

--- a/2021.mw
+++ b/2021.mw
@@ -1,10 +1,12 @@
 {{NavJaor}}
 
 == Gebeurtenissen ==
+* 20 januari - Joe Biden wördden de 46e president van de [[Verienigde Staoten van Amerika]].
+
+== Geboren ==
 * ...
 
-== Geboorn ==
+== Uut de tied ==
 * ...
 
-== Oet de tied ==
-* ...
+{{Dialekt|sdz}}
