*Empty MediaWiki Message*

--- a/2017.mw
+++ b/2017.mw
@@ -2,9 +2,12 @@
 
 == Gebeurtenissen ==
 * [[1 jannewaori]] - De ni-je [[Noord-Braobant]]se gemeante [[Meierijstad]] ontsteet deur et bi-j mekare doon van [[Veghel]], [[Schiendel]] en [[Sint-Oedenrode]].
+*20 jannewaori - [[Joe Biden]] wör de 46e presideant van de [[Verienigde Staoten van Amerika|Verenigde Stoaten van Amerika]].
 
 == Geboorn ==
 * ...
 
 == Oet de tied ==
 * ...
+
+{{Dialekt|twd}}
