*Empty MediaWiki Message*

--- a/2021.mw
+++ b/2021.mw
@@ -1,7 +1,12 @@
 {{NavJaor}}
 
 == Gebeurtenissen ==
-* 20 januari - Joe Biden wördden de 46e president van de [[Verienigde Staoten van Amerika]].
+* 6 januari - Radicale anhangers van de Amerikaanse president [[Donald Trump]] bestörmd et [[Capitool]].
+*15 januari - Et [[Kabinet Rutte-III]] scheidt er met uut vanweage de [[Toeslagenaffaire]].
+*15 januari - Er wördt eschat det zo'n twie miljoen meansen uut de tied bint egaon deur [[COVID-19]].
+*20 januari - Joe Biden wördden de 46e president van de [[Verienigde Staoten van Amerika]].
+*10 juni - In [[Noord-Amerika]], [[Europa]] en [[Azië]] is er een ringvörmige [[zunsverduustering]] te zien.
+*4 december - Op [[Antarctica]] en in dielen van de [[Grote Oceaan]] is er een totaole zunsverduustering te zien.
 
 == Geboren ==
 * ...
