*Empty MediaWiki Message*

--- a/Nikki_Herr.mw
+++ b/Nikki_Herr.mw
@@ -1,4 +1,4 @@
-'''Nikki Herr''' ([[Alphen an de Rijn]], [[2 april]] [[1991]])<ref>[https://wnl.tv/presentatoren/nikki-herr/ Heur pagina op wnl.tv]</ref> is een [[Nederlaand|Nederlaands]] presentator en verslaggeaver van veur Omroep [[WNL]]. Zie begun in [[2017]] as verslaggeaver veur et pregramma [[Goedemorgen Nederland (WNL)|Goedemorgen Nederland]]. Läter det jaor presenteerde zie ok ni'jsblokken in etzölfde pregramma. Sunds [[2018]] presenteert zie samen met [[Welmoed Sijtsma]], [[Maaike Timmerman]] en [[Lisette Wellens]]. Sunds [[januari]] [[2020]] is ze ok ien van de presentators van et [[Radio|radiopregramma]] [['t Wordt Nu Laat]] op [[NPO Radio 2]].
+'''Nikki Herr''' ([[Alphen an den Rijn (gemeente)|Alphen an de Rijn]], [[2 april]] [[1991]])<ref>[https://wnl.tv/presentatoren/nikki-herr/ Heur pagina op wnl.tv]</ref> is een [[Nederlaand|Nederlaands]] presentator en verslaggeaver van veur Omroep [[WNL]]. Zie begun in [[2017]] as verslaggeaver veur et pregramma [[Goedemorgen Nederland (WNL)|Goedemorgen Nederland]]. Läter det jaor presenteerde zie ok ni'jsblokken in etzölfde pregramma. Sunds [[2018]] presenteert zie samen met [[Welmoed Sijtsma]], [[Maaike Timmerman]] en [[Lisette Wellens]]. Sunds [[januari]] [[2020]] is ze ok ien van de presentators van et [[Radio|radiopregramma]] [['t Wordt Nu Laat]] op [[NPO Radio 2]].
 
 Herr begun heur loopbaan bi'j [[RTV Utrecht]] nao de schoele veur journalistiek edaon te hebben. Via RTV Utrecht kwamp ze bi'j Goedemorgen Nederland. 
 
