--- a/Anderhalve_eeuw_Zwols._Vocaalveranderingsprocessen_in_de_periode_1838-1972.mw
+++ b/Anderhalve_eeuw_Zwols._Vocaalveranderingsprocessen_in_de_periode_1838-1972.mw
@@ -2,7 +2,7 @@
 
 Het boek begint met een beschrieving van [[Zwolle]] in de [[19e eeuw]] en hoe as et Zwols stund in de saomenleaving toen en noe. In et boek wördt vervolgens duudelik emääkt wat kenmärkend is veur et Zwols en wat de verschillen bint tussen de verschillende wieken van Zwolle. Hiernao wördt een bulte bronnen gebruukt uut de 19e eeuw en daornao een bulte bronnen veur et teagenswoorige Zwols.
 
-Et belangriekste in dit boek is hoe as de klanken in de leste 150 jaor zich ontwikkeld hebt in et Zwols. Er hebt völle veranderings ewest, en zie kunt ook dateerd wördden. In de 19e eeuw veranderden beveurbield de ao in jaor en waor nao een öö (jöör, wöör) en de ee in neet en zeen in ie. Hiernao wördt in egaon op waorumme as de veranderings gebeurd bint en hoe as zie mekäre beinvloed hebt en of de [[Nederlaands|Nederlaandse]] [[Standaardtaal|standaardtääl]] hier wat met te mäken hef<ref>https://www.ijsselacademie.nl/publicaties/anderhalve-eeuw-zwols-vocaalveranderingsprocessen-in-de-periode-1838-1972/</ref>.
+Et belangriekste in dit boek is hoe as de klanken in de leste 150 jaor zich ontwikkeld hebt in et Zwols. Er hebt völle veranderings ewest, en er kan ok een jaortal an ehangen wördden. In de 19e eeuw veranderden beveurbield de ao in jaor en waor nao een öö (jöör, wöör) en de ee in neet en zeen in ie. Hiernao wördt in egaon op waorumme as de veranderings gebeurd bint en hoe as zie mekäre beinvloed hebt en of de [[Nederlaands|Nederlaandse]] [[Standaardtaal|standaardtääl]] hier wat met te mäken hef<ref>https://www.ijsselacademie.nl/publicaties/anderhalve-eeuw-zwols-vocaalveranderingsprocessen-in-de-periode-1838-1972/</ref>.
 ==Verwiezings==
 <references/>
 {{Dialekt|sdz}}
