--- a/Kreta.mw
+++ b/Kreta.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:GreeceCrete.png|250px|thumb|De ligging van Kreta]]
-'''Kreta''' ([[Grieks]]: Κρήτη, ''Kriti'') is 't grootste [[Griekenlaand|Griekse]] [[eilaand]], en is in grootte 't vuufde eilaand in de [[Middellaanse Zee]]. 't Eilaand is, samen mit een paor aandere kortbie-elegen eilaandjes, de meest zujelijke regio van de dartien Griekse regio's.
+'''Kreta''' ([[Grieks]]: Κρήτη, ''Kriti'') is 't grootste [[Griekenlaand|Griekse]] [[eilandnd]], en is in grootte 't vuufde eiland in de [[Middellaanse Zee]]. 't Eilaand is, samen mit een paor aandere kortbie-elegen eilaandjes, de meest zujelijke regio van de dartien Griekse regio's.
 
 Deur de goeie ligging tussen de kusten van [[Klein-Azië]], [[Cyprus]], [[Egypte (laand)|Egypte]] en [[Syrië]] hef Kreta, dat oek wè bekend is as de [[Venesië|Venesiaanse]] benaming ''Candia'', een lange geschiedenisse as centrum van de zeehaandel. Tussen [[1600]] en [[1400 v. Chr.]] kregen de Kretenzers, zoas de inwoeners van Kreta heten, deur hulen mach op zee een hoog beschavingspeil.
 
