--- a/Rieksweg_15.mw
+++ b/Rieksweg_15.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:NLD-N18.svg|right|50px|N18]]
 [[Ofbeelding:NL-A18.png|right|50px|A18]]
 [[Ofbeelding:Rijksweg15.svg|thumb|right|250px|Et rechtse deel van de Rieksweg 15 is de N18/A18.]]
-De '''N18''', ok wal 'Twenteroute' eneumd in [[Twente]] en den [[Achterhook]], is ne weg dee löp van [[Zevenaar]] noar [[Eanske]]. Et stuk Zevenaar-[[Vasseveld]] is emaakt as autobane (A18) en Vasseveld-Eanske as weg met geslottenverkloaring (N18). De A18/N18 heurt officieel bi'j den Rieksweg 15 (A15/N15), moar umdat de twee stukken neet an-eslotten bunt, hef et nen anderen name met-ekregen.
+De '''Rieksweg 15''', ook wel '''N18, A18, N15 en A15''', ok wal 'Twenteroute' eneumd in [[Twente]] en den [[Achterhook]], is ne weg dee löp van [[Zevenaar]] noar [[Eanske]]. Et stuk Oud Dijk-[[Vasseveld]] is emaakt as autobane (A18) en Vasseveld-Enschede West as weg met geslottenverkloaring (N18). De A18/N18 heurt officieel bi'j den Rieksweg 15 (A15/N15), moar umdat et oostelik deel om enummert is in [[1986]] hef et nen anderen name met-ekregen.
 
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:Weg in Gelderlaand]]
