--- a/Rieksweg_15.mw
+++ b/Rieksweg_15.mw
@@ -3,7 +3,7 @@
 [[Ofbeelding:NL-A15.svg|right|50px|A15]]
 [[Ofbeelding:NLD-N15.svg|right|50px|N15]]
 [[Ofbeelding:Rijksweg15.svg|thumb|right|250px|Et rechtse deel van de Rieksweg 15 is de N18/A18.]]
-De '''Rieksweg 15''', ook wel '''N18, A18, N15 en A15''', ok wal 'Twenteroute' eneumd in [[Twente]] en den [[Achterhook]], is ne weg dee löp van [[Zevenaar]] noar [[Eanske]]. Et stuk Oud Dijk-[[Vasseveld]] is emaakt as autobane (A18) en Vasseveld-Enschede West as weg met geslottenverkloaring (N18). De A18/N18 heurt officieel bi'j den Rieksweg 15 (A15/N15), moar umdat et oostelik deel om enummert is in [[1986]] hef et nen anderen name met-ekregen.
+De '''Rieksweg 15''', ook wel '''N18, A18, N15 en A15''', ok wal 'Twenteroute' eneumd in [[Twente]] en den [[Achterhook]], is ne weg dee löp van [[Zevenaar]] noar [[Eanske]]. Et stuk Oud Dijk-[[Vasseveld]] is emaakt as autobane (A18) en Vasseveld-Enschede West as weg met geslottenverkloaring (N18). De A18/N18 heurt officieel bi'j den Rieksweg 15 (A15/N15), moar umdat et oostelik deel een aander nummer kreeg in [[1986]] hef et nen anderen name met-ekregen.
 
 {{Snelwegen Nederlaand}}
 [[Kategorie:Achterhooks artikel]]
