*Empty MediaWiki Message*

--- a/Rieksweg_28.mw
+++ b/Rieksweg_28.mw
@@ -602,5 +602,6 @@ Bestaand:A28 Verzorgingsplaats Witte Molen.JPG|Tussen de '''ofslagen 37 en 38'''
 <references/>
 
 {{Dialekt|sdz}}
+{{Snelwegen Nederlaand}}
 
 [[Kategorie:Rieksweg 28| ]]
